# skse-library-client-demo

./: CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
include/: Logging.h
src/: PCH.h  Plugin.cpp
